# tractoracle_irt

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  install_torch.sh  pyproject.toml  requirements.txt  setup.py  submit_experiments.py  track_docker.sh
configs/: inferno_example.yml
configs/datasets/: ds_inferno_config_example.yml
configs/defaults/: public_files.yml
configs/nextflow/: extractor.config  (+1 more)
docs/: CONTRIBUTING.md  build_agent_dataset.md  build_dataset_streamlines.md  build_dataset_tracking.md  setup_comet.md  train_fodf_ae.md  train_oracle.md  using_apptainer.md
fodf_ae/: main.py
results/: BIL&GIN-test-subjects.xlsx  ISMRM2015-test.xlsx  recovered_streamlines.xlsx
scripts/: add_algorithm_to_hyperparameters.py  combine_comet_plots.py  create_streamlines_dataset.py  dataset_generate_config.py  download_public_files.py  hdf5_add_fas.py  hdf5_add_transfos.py  hdf5_analyze.py  hdf5_equilibrate_datasets.py  hdf5_is_dataset_shuffled.py  hdf5_merge_antoine_streamlines.py  hdf5_merge_datasets.py  hdf5_print_structure.py  hdf5_separate_streamlines.py  hdf5_separate_with_valid.py  hdf5_shuffle.py  hdf5_subsample.py  hdf5_to_tractogram.py  organize_extractor_flow_input.sh  organize_tractoflow_output.sh  postproc_verifyber.py  postproc_verifyber_slurm.sh  run_extractor_flow.py  scil_score_ismrm_Renauld2023.sh  score_tractograms.py  split_tractograms.py  tractogram_post_processing.sh  train_oraclenet.sh
tests/: test_hdf5_utils.py  test_interpolation.py  test_lazy_tensor.py  test_rollout_env.py  test_runners.py  test_streamline_dataset_manager.py
(+91 files in other folders)
